Fix favorites icon alignment and add animation

--- a/src/App.scss
+++ b/src/App.scss
@@ -46,26 +46,44 @@ body {
                 scale: 1.5;
                 color: #d71a5e;
                 align-self: center;
-                position: relative;
                 top: -4px;
-                display: flex;
-                justify-content: center;
                 cursor: pointer;
+                transition: all 120ms ease-out;
+                user-select: none;
 
-                > span:nth-child(1) {
-                    transform: rotate(-32deg) translate(10px, 9px);
+                @keyframes flash {
+                    0%,
+                    100% {
+                        color: transparent;
+                        border-radius: 12px;
+                        text-shadow: white;
+                    }
+                    50% {
+                        color: #aaa;
+                    }
                 }
 
-                > span:nth-child(2) {
-                    transform: rotate(0deg) translate(0px, 1.9px);
+                &:active {
+                    animation: flash 0.5s;
                 }
 
-                > span:nth-child(3) {
-                    transform: rotate(32deg) translate(-10px, 9px);
-                }
+                > span {
+                    display: flex;
+                    justify-content: center;
 
+                    > span:nth-child(1) {
+                        transform: rotate(-32deg) translate(10px, 9px);
+                    }
+
+                    > span:nth-child(2) {
+                        transform: rotate(0deg) translate(0px, 1.9px);
+                    }
+
+                    > span:nth-child(3) {
+                        transform: rotate(32deg) translate(-10px, 9px);
+                    }
+                }
                 > span.favorites-label {
-                    position: absolute;
                     top: 15px;
                     font-size: x-small;
                 }
@@ -87,7 +105,8 @@ body {
 
             > div.favorites {
                 display: flex;
-                flex-direction: column;
+                flex-direction: row;
+                flex-wrap: wrap;
                 align-items: center;
                 justify-content: center;
                 padding: 1rem;
@@ -104,6 +123,7 @@ body {
                 font-size: 3rem;
 
                 > li.card {
+                    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
                     display: flex;
                     justify-content: center;
                     align-items: center;
@@ -132,6 +152,7 @@ body {
 
                     &:hover {
                         transform: scale(1.05);
+                        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
 
                         &::after {
                             width: 40%;
@@ -150,19 +171,21 @@ body {
 
                     > button.favorite-heart {
                         position: absolute;
-                        font-size: 20px;
                         bottom: 0rem;
                         right: 0.5rem;
                         color: #d71a5e;
                         cursor: pointer;
-                        transition: all 0.4s ease;
+                        transition: opacity 0.4s ease, transform 0.2s ease;
                         opacity: 0;
                         background-color: transparent;
                         border: none;
                         outline: none;
                         z-index: 2;
 
-                        @media (max-width: 768px), active {
+                        &.active {
+                            opacity: 1;
+                        }
+                        @media (max-width: 425px) {
                             opacity: 1;
                         }
                         > svg {
@@ -172,8 +195,10 @@ body {
                     }
 
                     &:hover {
-                        > button.favorite-heart {
+                        > button.favorite-heart,
+                        &.active {
                             opacity: 1;
+                            transform: scale(1.1);
                         }
                     }
                 }
